Bug Fixes - Menu on mobile

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -108,7 +108,7 @@ body, html, main {
     top: 90px;
     padding: 8px;
     cursor: pointer;
-    z-index: 500;
+    z-index: 1000;
 }
 
 .menuicon * {
@@ -142,7 +142,7 @@ body, html, main {
 
 .menu {
     box-sizing: border-box;
-    position: absolute;
+    position: fixed;
     display: flex;
     top: 0;
     left: 0;
@@ -188,7 +188,7 @@ body, html, main {
         height: auto;
         text-align: left;
         box-sizing: border-box;
-        padding: 20px 20px 20px 20px;
+        padding: 90px 20px 20px 20px;
         text-align: center;
     }
     
@@ -198,7 +198,8 @@ body, html, main {
     }
 
     .menuicon {
-        position: initial;
+        top: 30px;
+        left: 30px;
     }
 
     .menuicon * {
@@ -223,6 +224,7 @@ body, html, main {
         height: 300px !important;
         width: auto;
         mix-blend-mode: initial !important;
+        z-index: 0;
     }
     
     .post-item {
@@ -254,6 +256,10 @@ body, html, main {
     .menu a {
         box-sizing: border-box;
         width: 100%;
+    }
+
+    .menu {
+        z-index: 1;
     }
     
 }
